# MessageHub

./: Cargo.toml
core/: Cargo.toml
core/migrations/: 001_initial.sql  002_knowledge.sql  003_ai.sql
core/src/: error.rs  lib.rs
core/src/adapters/: email.rs  manager.rs  mock.rs  mod.rs  telegram.rs
core/src/ai/: classifier.rs  llm.rs  mod.rs  pipeline.rs  profile.rs  prompts.rs  rag.rs
core/src/knowledge/: embedder.rs  indexer.rs  mod.rs  parser.rs  people.rs  retrieval.rs  watcher.rs
core/src/store/: ai_log.rs  channels.rs  contacts.rs  knowledge.rs  messages.rs  migrations.rs  mod.rs
core/src/types/: channel.rs  contact.rs  message.rs  mod.rs  thread.rs
core/tests/: adapter_integration.rs  ai_classifier_test.rs  ai_llm_test.rs  ai_ollama_integration_test.rs  ai_pipeline_test.rs  ai_profile_test.rs  ai_prompts_test.rs  ai_rag_test.rs  knowledge_indexer_test.rs  knowledge_parser_test.rs  knowledge_retrieval_test.rs  store_ai_log_test.rs  store_contacts_test.rs  store_encryption_test.rs  store_knowledge_test.rs  store_knowledge_upsert_test.rs  store_messages_test.rs  store_search_test.rs
docs/superpowers/plans/: 2026-04-16-plan1-core-storage.md  2026-04-16-plan2-channel-adapters.md  2026-04-17-plan3-knowledge-engine.md
docs/superpowers/specs/: 2026-04-16-messagehub-design.md
