[package]
name = "messagehub-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "vtab", "modern_sqlite"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
async-imap = "0.9"
async-native-tls = "0.5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mail-parser = "0.9"
futures = "0.3"
sqlite-vec = "0.1"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
blake3 = "1"
notify = "7"
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
